--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ Temporary Items
 .apdisk
 
 # Visual Studio
+ProfessionalEvaluation.v11.suo
 ProfessionalEvaluation.Model/bin
 ProfessionalEvaluation.Model/obj
 ProfessionalEvaluation.Website/bin
