--- a/ProfessionalEvaluationUnitTest.Tests/ProfessionalEvaluationUnitTest.Tests.csproj
+++ b/ProfessionalEvaluationUnitTest.Tests/ProfessionalEvaluationUnitTest.Tests.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AssesmentTest.cs" />
     <Compile Include="EvaluationTest.cs" />
     <Compile Include="IndustryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
