--- a/ProfessionalEvaluation.Persistence/ProfessionalEvaluation.Persistence.csproj
+++ b/ProfessionalEvaluation.Persistence/ProfessionalEvaluation.Persistence.csproj
@@ -44,8 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssesmentPersistence.cs" />
     <Compile Include="DataAdapterFactory.cs" />
     <Compile Include="EvaluationPersistence.cs" />
+    <Compile Include="Persistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
