--- a/ProfessionalEvaluation.Persistence/ProfessionalEvaluation.Persistence.csproj
+++ b/ProfessionalEvaluation.Persistence/ProfessionalEvaluation.Persistence.csproj
@@ -49,6 +49,7 @@
     <Compile Include="EvaluationPersistence.cs" />
     <Compile Include="Persistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionPersistence.cs" />
     <Compile Include="SectionPersistence.cs" />
   </ItemGroup>
   <ItemGroup>
