--- a/ProfessionalEvaluationUnitTest.Tests/ProfessionalEvaluationUnitTest.Tests.csproj
+++ b/ProfessionalEvaluationUnitTest.Tests/ProfessionalEvaluationUnitTest.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="EvaluationTest.cs" />
     <Compile Include="IndustryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SectionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProfessionalEvaluation.Model\ProfessionalEvaluation.Model.csproj">
