--- a/ProfessionalEvaluation.Website/ProfessionalEvaluation.Website.csproj
+++ b/ProfessionalEvaluation.Website/ProfessionalEvaluation.Website.csproj
@@ -157,6 +157,9 @@
   <ItemGroup>
     <Content Include="Views\Assesment\Index.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\PublicacionLaboruTech.pubxml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
