--- a/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
+++ b/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
@@ -39,11 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerTO.cs" />
     <Compile Include="AssesmentContextTO.cs" />
     <Compile Include="AssesmentTO.cs" />
     <Compile Include="CompanyTO.cs" />
     <Compile Include="EvaluationTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionResponseTO.cs" />
     <Compile Include="QuestionTO.cs" />
     <Compile Include="SectionTO.cs" />
   </ItemGroup>
