Assesment UI Done
- Answers need to be saved to database

--- a/ProfessionalEvaluation.Website/ProfessionalEvaluation.Website.csproj
+++ b/ProfessionalEvaluation.Website/ProfessionalEvaluation.Website.csproj
@@ -162,6 +162,8 @@
     <Content Include="Views\Assesment\Instructions.cshtml" />
     <Content Include="Views\Shared\_AssesmentLayout.cshtml" />
     <Content Include="Views\Assesment\Execution.cshtml" />
+    <Content Include="Views\Assesment\Done.cshtml" />
+    <Content Include="Views\Assesment\AlreadyDone.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
