Assesment UI Done, Pdf
- % Right not working

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ ProfessionalEvaluationUnitTest.Tests/bin
 ProfessionalEvaluationUnitTest.Tests/obj
 ProfessionalEvaluation.Persistence/bin
 ProfessionalEvaluation.Persistence/obj
+ProfessionalEvaluation.Utilities/bin
+ProfessionalEvaluation.Utilities/obj
