--- a/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
+++ b/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
@@ -41,12 +41,15 @@
   <ItemGroup>
     <Compile Include="AnswerTO.cs" />
     <Compile Include="AssesmentContextTO.cs" />
+    <Compile Include="AssesmentResults\AssesmentReportTO.cs" />
+    <Compile Include="AssesmentResults\SectionReportTO.cs" />
     <Compile Include="AssesmentTO.cs" />
     <Compile Include="CompanyTO.cs" />
     <Compile Include="EvaluationTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionResponseTO.cs" />
     <Compile Include="QuestionTO.cs" />
+    <Compile Include="AssesmentResults\SectionPointsTO.cs" />
     <Compile Include="SectionTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
