--- a/ProfessionalEvaluation.Utilities/ProfessionalEvaluation.Utilities.csproj
+++ b/ProfessionalEvaluation.Utilities/ProfessionalEvaluation.Utilities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A4CE4C2-66E7-4221-9DFA-49D8339AB817}</ProjectGuid>
+    <ProjectGuid>{1D177C5F-08E9-4204-A6C0-5DB7EDB5DE20}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProfessionalEvaluation.Model</RootNamespace>
-    <AssemblyName>ProfessionalEvaluation.Model</AssemblyName>
+    <RootNamespace>ProfessionalEvaluation.Utilities</RootNamespace>
+    <AssemblyName>ProfessionalEvaluation.Utilities</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PdfSharp">
+      <HintPath>..\packages\PdfSharp.1.32.3057.0\lib\net20\PdfSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="PdfSharp.Charting">
+      <HintPath>..\packages\PdfSharp.1.32.3057.0\lib\net20\PdfSharp.Charting.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,30 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assesment.cs" />
-    <Compile Include="Evaluation.cs" />
-    <Compile Include="Industry.cs" />
+    <Compile Include="Pdf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Section.cs" />
-    <Compile Include="SectionData\InternalSectionData.cs" />
-    <Compile Include="SectionData\SectionDataFactory.cs" />
-    <Compile Include="SectionData\SectionDataProvider.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProfessionalEvaluation.Persistence\ProfessionalEvaluation.Persistence.csproj">
-      <Project>{5d16b752-9609-4f31-b5a3-1c5fe8051c82}</Project>
-      <Name>ProfessionalEvaluation.Persistence</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\ProfessionalEvaluation.TO\ProfessionalEvaluation.TO.csproj">
       <Project>{8d8861e7-826e-45fe-93a0-4995b5708036}</Project>
       <Name>ProfessionalEvaluation.TO</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProfessionalEvaluation.Utilities\ProfessionalEvaluation.Utilities.csproj">
-      <Project>{1d177c5f-08e9-4204-a6c0-5db7edb5de20}</Project>
-      <Name>ProfessionalEvaluation.Utilities</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
