--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\ProfessionalEvaluation.Persistence\packages.config" />
+  <repository path="..\ProfessionalEvaluation.Utilities\packages.config" />
   <repository path="..\ProfessionalEvaluation.Website\packages.config" />
 </repositories>
