--- a/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
+++ b/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
@@ -40,6 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnswerTO.cs" />
+    <Compile Include="AssesmentAnalysis\AssesmentRoleLevelTO.cs" />
+    <Compile Include="AssesmentAnalysis\AssesmentAnalysisReportTO.cs" />
+    <Compile Include="AssesmentAnalysis\AssesmentResultComparisonTO.cs" />
+    <Compile Include="AssesmentAnalysis\AssesmentRoleResultTO.cs" />
     <Compile Include="AssesmentContextTO.cs" />
     <Compile Include="AssesmentResults\AssesmentReportTO.cs" />
     <Compile Include="AssesmentResults\SectionReportTO.cs" />
