--- a/ProfessionalEvaluationUnitTest.Tests/App.config
+++ b/ProfessionalEvaluationUnitTest.Tests/App.config
@@ -2,5 +2,11 @@
 <configuration>
   <appSettings>
     <add key="Database" value="Server=localhost;Database=pro_evaluation;Uid=root;Pwd=12345;" />
+    <add key="FromEmailAccount" value="mauricio.bedoya@gmail.com" />
+    <add key="FromEmailAccountName" value="Laboru Tech" />
+    <add key="FromEmailAccountPassword" value="mauricio12*12" />
+    <add key="MailHost" value="localhost" />
+    <add key="PdfGenerationPath" value="C:\Temp\" />
+    <add key="SiteFilesPath" value="C:\Temp\" />
   </appSettings>  
 </configuration>
