--- a/ProfessionalEvaluation.Persistence/ProfessionalEvaluation.Persistence.csproj
+++ b/ProfessionalEvaluation.Persistence/ProfessionalEvaluation.Persistence.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalysisPersistence.cs" />
     <Compile Include="AssesmentPersistence.cs" />
     <Compile Include="DataAdapterFactory.cs" />
     <Compile Include="EvaluationPersistence.cs" />
