--- a/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
+++ b/ProfessionalEvaluation.TO/ProfessionalEvaluation.TO.csproj
@@ -50,6 +50,7 @@
     <Compile Include="AssesmentTO.cs" />
     <Compile Include="CompanyTO.cs" />
     <Compile Include="EvaluationTO.cs" />
+    <Compile Include="MailMessageTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionResponseTO.cs" />
     <Compile Include="QuestionTO.cs" />
