--- a/ProfessionalEvaluation.Website/Web.config
+++ b/ProfessionalEvaluation.Website/Web.config
@@ -8,6 +8,11 @@
   <appSettings>
     
     <add key="Database" value="Server=localhost;Database=pro_evaluation;Uid=root;Pwd=12345;" />
+    <add key="FromEmailAccount" value="mauricio.bedoya@gmail.com" />
+    <add key="FromEmailAccountName" value="Laboru Tech" />
+    <add key="FromEmailAccountPassword" value="mauricio12*12" />
+    <add key="MailHost" value="localhost" />
+    <add key="PdfGenerationPath" value="C:\Temp\" />
     
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
