--- a/ProfessionalEvaluationUnitTest.Tests/ProfessionalEvaluationUnitTest.Tests.csproj
+++ b/ProfessionalEvaluationUnitTest.Tests/ProfessionalEvaluationUnitTest.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AssesmentTest.cs" />
     <Compile Include="EvaluationTest.cs" />
     <Compile Include="IndustryTest.cs" />
+    <Compile Include="MailTest.cs" />
     <Compile Include="PdfTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SectionTest.cs" />
