--- a/ProfessionalEvaluation.Website/ProfessionalEvaluation.Website.csproj
+++ b/ProfessionalEvaluation.Website/ProfessionalEvaluation.Website.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AssesmentController.cs" />
+    <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\EvaluationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MailController.cs" />
@@ -172,6 +173,8 @@
     <Content Include="Views\Assesment\AlreadyDone.cshtml" />
     <Content Include="Views\Mail\Index.cshtml" />
     <Content Include="Views\Pdf\Index.cshtml" />
+    <Content Include="Views\Shared\_CompanyLayout.cshtml" />
+    <Content Include="Views\Company\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
